add: Support for flagged, dupe, and dead articles in RSS feed
